--- a/operations/operations.vcxproj
+++ b/operations/operations.vcxproj
@@ -152,7 +152,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="framework.h" />
-    <ClInclude Include="functions.h" />
+    <ClInclude Include="dllmain.hpp" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
