test:linking with parser function from DLL C++ to C++ 'test'

--- a/operations/operations.vcxproj.filters
+++ b/operations/operations.vcxproj.filters
@@ -32,5 +32,11 @@
     <ClCompile Include="pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="parser.cpp">
+      <Filter>Resource Files</Filter>
+    </ClCompile>
+    <ClCompile Include="interface.cpp">
+      <Filter>Resource Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
