still working on parser functions

--- a/operations/operations.vcxproj
+++ b/operations/operations.vcxproj
@@ -157,6 +157,7 @@
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="node.cpp" />
     <ClCompile Include="math.cpp" />
     <ClCompile Include="interface.cpp" />
     <ClCompile Include="pch.cpp">
