--- a/operations/operations.vcxproj.filters
+++ b/operations/operations.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClCompile Include="interface.cpp">
       <Filter>Resource Files</Filter>
     </ClCompile>
+    <ClCompile Include="node.cpp">
+      <Filter>Resource Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
